@@ -1,6 +1,7 @@
 Release 2.1
 ===========
 * new action "Bulk Update"
+* add support for ImageField / FileField
 * add Django 4.1 support
 * add Python 3.11 support
 * Use Black for code formatting
@@ -8,6 +9,7 @@ Release 2.1
 * Merged #215 - Merge action support signals  - https://github.com/saxix/django-adminactions/pull/212
 * Merged #207 - work with any collection to ignore fields - https://github.com/saxix/django-adminactions/pull/207
 * Merged #206 - docs: Fix a few typos - https://github.com/saxix/django-adminactions/pull/206
+* Merged #200 - Very lame fix for #199 - https://github.com/saxix/django-adminactions/pull/200
 
 
 Release 2.0
